--- a/SlowStar/appsettings.Development.json
+++ b/SlowStar/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-TNHKHHJ;Database=Allaia;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
